--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     color: white;
     text-align: center;
     padding: 10px;
+    font-size: 40px;
   }
   
   div {
@@ -18,11 +19,12 @@
   .monday{
     margin-left: auto;
     margin-right: auto;
-    width: 350px;
+    width: 1000px;
     background: rgb(70, 143, 101);
     color: white;
     border: 1px solid black;
     border-radius: 5px;
+    font-size: 40px;
   }
   .text{
     text-align: left;
