--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     color: white;
     text-align: center;
     padding: 10px;
-    font-size: 40px;
+    font-size: 60px;
   }
   
   div {
@@ -24,11 +24,11 @@
     color: white;
     border: 1px solid black;
     border-radius: 5px;
-    font-size: 40px;
+    font-size: 41px;
   }
 
   .monday th, .monday td {
-   padding: 15px;
+   padding: 18px;
    border: 4px solid black; 
   }
   .text{
@@ -42,12 +42,13 @@
   .table {
     margin-left: auto;
     margin-right: auto;
-    width: 300px;
+    width: 900px;
     background: rgb(27, 30, 28);
     color: white;
     border: 1px solid black;
     border-radius: 5px;
     text-align: left;
+    font-size: 35;
   }
 
   #jk:hover {
